@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class ListCatalogoServicoUI <<presentation>>
class ListCatalogoServicoController <<application>>
class PersistenceContext <<persistence>>
class RepositoryFactory <<factory>>
class CatalogoRepository <<repository>>
class ServicoRepository <<repository>>
class EquipaRepository <<repository>>


ListCatalogoServicoUI --> ListCatalogoServicoController
ListCatalogoServicoController : listCatalogo()
ListCatalogoServicoController : listServico()
ListCatalogoServicoController : listEquipas()

ListCatalogoServicoController : findCatalogos(listEquipas, dados)
ListCatalogoServicoController : getEquipasDoUser()
ListCatalogoServicoController : findServicos(listEquipas, listCatalogos, dadosServico)

ListCatalogoServicoController --> CatalogoRepository
ListCatalogoServicoController --> ServicoRepository
ListCatalogoServicoController --> EquipaRepository
ListCatalogoServicoController --> PersistenceContext
PersistenceContext : repositories()
ListCatalogoServicoController --> RepositoryFactory
RepositoryFactory : catalogos()
RepositoryFactory : servicos()
RepositoryFactory : equipas()

PersistenceContext --> RepositoryFactory
RepositoryFactory --> CatalogoRepository
RepositoryFactory --> ServicoRepository
RepositoryFactory --> EquipaRepository

EquipaRepository : getEquipasDoUser()

CatalogoRepository : findCatalogos(listEquipas, dados)

ServicoRepository : findServicos(listEquipas, listCatalogos, dadosServico)

@enduml
